视频空白修复250902

--- a/index.html
+++ b/index.html
@@ -363,14 +363,14 @@
         // ];
         var videoUrls = [
 /*          'assets/video/01.mp4',*/
-/*          'assets/video/02.mp4',
+          'assets/video/02.mp4',
           'assets/video/03.mp4',
-          'assets/video/04.mp4',*/
+          'assets/video/04.mp4',
 /*          'assets/video/05.mp4'*/
           'https://1253934854.vod2.myqcloud.com/a89107cevodcq1253934854/e208855e3270835015471114876/iAbeVyX87O8A.mp4?bili-avid=95473051',
-          'https://holcc-cdn.haier.net/lemc/aliyun2/20250420/907ad2b043aa43f48f3a385a744fc0b7.mp4',
+/*          'https://holcc-cdn.haier.net/lemc/aliyun2/20250420/907ad2b043aa43f48f3a385a744fc0b7.mp4',
           'https://holcc-cdn.haier.net/lemc/aliyun2/20250420/becd3b46965744988e4219e92da93db7.mp4',
-          'https://holcc-cdn.haier.net/lemc/aliyun2/20250420/a7f3647f2d0549be84fb09fc46a5b9b7.mp4',
+          'https://holcc-cdn.haier.net/lemc/aliyun2/20250420/a7f3647f2d0549be84fb09fc46a5b9b7.mp4',*/
           'https://1253934854.vod2.myqcloud.com/a89107cevodcq1253934854/9e4c871a3270835015446138405/A2whnUfubTgA.mp4?bili-avid=802039278',
           'https://1253934854.vod2.myqcloud.com/a89107cevodcq1253934854/ccf9295d3270835015467515037/khX5M4cLkukA.mp4?bili-avid=89474889'
         ];
