--- a/index.html
+++ b/index.html
@@ -203,18 +203,14 @@
               <h1>PantsuMeow</h1>
               <p>
                 我是 PantsuMeow ，头戴胖次防御力+3000<br>
-                地球Online—CN区忠实玩家，已获取非法权限接入外区...<br>
+                地球Online—CN区忠实玩家，已获取权限接入外区...<br>
                 <del>黄游开发者</del> 游戏开发者，想要拯救世界(满足自己)的技术宅<br>
-                资深妹控 / 腿控 / 萝莉控 /<br>
-                二次元禁断综合征患者
+                资深妹控 / 腿控 / 萝莉控<br>
+                二次元禁断综合征患者<br>
+                <del>理想的女友类型：萝莉妈妈</del>
                 <br>
                 <br>
                 『 彷徨える孤高の魂は、拠り所を必要としねえんだよ。 』<br>
-                <br>
-                <br>
-                独立游戏制作中，已被蓝图搞疯，想找个朋友帮忙做渲染...<br>
-                <del>当然，女朋友更好</del><br>
-                <del>不过这样的话，似乎只做渲染就不够了...</del><br>
               </p>
             </section>
             <section id="contact">
